<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_news_cover"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:scaleType="center"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/tv_news_details_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_news_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/news_details_info_margin"
            android:text="@string/text_placeholder"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_news_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/news_details_info_margin"
            android:text="@string/news_update_format"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_news_read_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/news_details_info_margin"
            android:text="@string/news_read_num_format"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_news_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/news_details_info_margin"
            android:text="27"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_news_details_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autoLink="web"
        android:text="@string/text_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Small" />

    <include layout="@layout/include_news_comment" />
</LinearLayout>