<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_marginVertical="4dp"
    android:layout_height="wrap_content">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView_placeholder3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_car" />

        <TextView
            android:id="@+id/tv_record_parkName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="天津市邦仓储威物流停车场"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView_placeholder3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_record_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="地址：天津市邦仓储威物流"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_placeholder3"
            app:layout_constraintStart_toEndOf="@+id/imageView_placeholder3" />

        <TextView
            android:id="@+id/tv_record_outTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/outTime_record_format"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_record_address"
            app:layout_constraintStart_toEndOf="@+id/imageView_placeholder3" />

        <TextView
            android:id="@+id/tv_record_plateNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="辽B12345"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_placeholder3"
            app:layout_constraintEnd_toEndOf="@+id/imageView_placeholder3"
            app:layout_constraintStart_toStartOf="@+id/imageView_placeholder3" />

        <TextView
            android:id="@+id/tv_record_entryTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="2dp"
            android:text="@string/entryTime_record_format"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_record_outTime"
            app:layout_constraintStart_toEndOf="@+id/imageView_placeholder3" />

        <TextView
            android:id="@+id/tv_record_monetary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/monetary_record_format"
            android:textColor="@color/rmb"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_record_parkName" />

        <TextView
            android:id="@+id/tv_record_parkNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:text="@string/parkNo_record_format"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_record_monetary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>